tls_taxisbahia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxisbahiadeploy
  labels:
    type: endpoints-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxisbahiadeploy
  template:
    metadata:
      labels:
        app: taxisbahiadeploy
    spec:
      containers:
      - name: taxisbahiadeploy
        image: gcr.io/innate-beacon-797/taxisbahia:1.0.131
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: taxisbahia
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: taxisbahiadeploy
