tls_taxisbahia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxibahia
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: taxisbahiadeploy
