tls_taxisbahia/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
    - hosts:
      - taxisbahia.cl
      secretName: quickstart-example-tls
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taxisbahia
                port:
                  number: 8080
