tls_taxisbahia/ingress-tls2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - taxisbahia.cl
      secretName: hello-tls
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - backend:
              serviceName: taxisbahia
              servicePort: 8080
