tls_taxisbahia/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    type: endpoints-app
spec:
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - backend:
              serviceName: esp-srv
              servicePort: 8080
